# recipe-scraper

./: pyproject.toml
recipe/: run_recipe_spider.py
recipe/recipe/: items.py  pipelines.py  settings.py
recipe/recipe/spiders/: kitchencoach_spider.py
